# DSO

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build_jetson.sh  build_ubuntu.sh  camera.txt  result.txt
shaders/: anypoint_mode1.frag  anypoint_mode1.gl.frag  anypoint_mode2.frag  anypoint_mode2.gl.frag  fullscreen.vert  panorama_car.frag  panorama_car.gl.frag  panorama_tube.frag  panorama_tube.gl.frag
src/: main_camera.cpp  main_live.cpp
src/IOWrapper/Pangolin/: AnypointShader.cpp  AnypointShader.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/util/: AnypointParams.cpp  AnypointParams.h  AnypointRemap.cpp  AnypointRemap.h  settings.cpp
